public/styles/layout.css
/*.page-text{
  color:white;
}

.right-buffer {
  width: 66%;
  margin: 0 auto;
  text-align: left;
  float: left;
}

#petLargeness {
  width: 33%;
  font-size: 25px;
  width: 33%;
  display: block;
  font-size: 20px;
  margin-left: auto;
  margin-right: auto;
  margin-top: 25px;
}

#gender, .page-text {
  font-size: 30px;
  margin: 15px;
}

#zipFind {
  margin: 10px;
}

.find-new-pet-btn {
  width: 250px;
  border-radius: 15px;
}

#show-me-btn {
  display: block;
  width: 300px;
  margin-top: 30px;
}

#search-btn-transition {
  margin-top: 30px;
  width: 100px;
}

#save-pet-btn, #adopt-pet-btn, #back-search-btn {
  width: 200px;
}

input[type='radio'] {
   transform: scale(1.5);
}

input[type='checkbox'] {
   transform: scale(1.5);
}

#noMatches {
  width: 30em;
  margin-top: 5em;
  margin: auto;
  line-height: 150%;
}

.choice-container {
  width: 100%;
  display: inline-block;
  height: 30px;
}

.left-buffer {
  width: 33%;
  margin: 0 auto;
  float: left;
  height: 20px;
}

.adoptButton {
  display: inline-block;
  width: auto;
}*/


/*------Element Properties-----*/
/*------Element IDs-------*/
#body-wrapper{
  background: url('../images/dog-pet.jpg') no-repeat center center fixed;
  background-size: cover;
  width: 100%;
  height: 100%;
  z-index: 0;
  position: absolute;
}
#nav-title-wrapper{
  position:relative;
  width: 100%;
  z-index: 2;
}
#nav-details{
  display: table;
  width: 100%;
  height: 100%;
}
#mobile-menu{
  font-size: 50px;
  width: 50px;
  height:50px;
  margin:0 auto;
  color: ivory;
  display: table-cell;
}
#nav-title{
  font-size: 45px;
  height: 50px;
  color: ivory;
  font-family: 'Poiret One', cursive;
  display: table-cell;
}
#main-wrapper{
  width: 100%;
  z-index: 2;
}

#greeting-text{
  position: relative;
  top:200px;
}
#randomResultsWrapper{
  display: table;
  vertical-align: center;
  text-align: center;
}
#savedPets{
  position: relative;
  height: 500px;
  width: 100%;
}
#noMatches{
  visibility: hidden;
}
#randomPetMessage{
  display: none;
}
#Animal_Detail > * {
  text-align: left;
  width: 70%;
  margin: 0 auto;
}
#about{
  text-align: center;
}

/*--------Element Classes--------*/
.section-wrapper{
  position:relative;
  width: 100%;
  height: 100%;
  z-index: 1;
}
.pet-summary-element{
  width: 300px;
  height: 350px;
  margin: 3px;
  float: left;
  background-color: #2c2c2c;
  border-radius: 10px;
}
.petButton {
  width: 100px;
  border-radius: 15px;
}

.interestedButton{
  width: 200px;
  border-radius: 15px;
}
.basicInfo, .detailTop, .detailBottom{
  padding-left: 15px;
}
.profile-element{
  display: table;
  height: 100%;
  width: 80%;
}
.img {
  display: table-cell;
  vertical-align: center;
  width: 100px;
  height: 100px;
}
.profile-icons{
  padding: 5px;
  font-size: 30px;
}
.profile-element{
  margin: 0 auto;
  display: table;
}
/*-------Positioning--------*/
.float-left{
  float: left;
}
.table-cell{
  display: table-cell;
}
.photo-container{
  width: 100px;
  padding: 10px;
}
.vertical-align{
  vertical-align: top;
}
/*--------Styling------*/
.ivory-text{
  color:ivory;
}
.maven{
  font-family: 'Maven Pro', sans-serif;
}
.blur{
  -webkit-filter: blur(10px);
  filter: blur(10px);
}
.darken{
  -webkit-filter: brightness(25%);
}
.underline{
  text-decoration: underline;
}

.descript {
  padding-right: 6.250em;
}
.img-round {
  border-radius: 500px;
}
.justify-text{
  text-align: justify;
}


/* Desktop */
@media only screen and (min-width: 691px) {
   #randomPetMessage{
    display: inline;
  }
/*
  .petButton {
    display: inline-block;
    width: 30%;
  }

  .adoptButton {
    display: inline-block;
    width: auto;
    margin-bottom: 1em;
  }

  .pet-summary-element {
    display: inline-block;
    margin: 2em 2em;
    height: auto;
    border: 1px solid black;
    width: 20%;
    background-color: grey;
  }

  .pet-summary-element h1 {
    font: 1em;
  }

  .pet-summary-element img {
    margin-top: .5em;
    height: 100px;
    width: 100px;
  }

  checkbox {
    display: block;
    margin-top: 1em;
  }

  checkbox span {
    display: block;
    margin-top: 1em;
  }

  .petLargeness {
    display: inline-block;;
    margin-left: 50%;
    margin-right: 50%;
  }*/
}

